--- a/quotes/templates/base.html
+++ b/quotes/templates/base.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="https://www.nyse.com/listings_directory/stock">Ticker Lookup</a>
+        <a class="nav-link" href="https://www.nyse.com/listings_directory/stock" target= "_blank">Ticker Lookup</a>
       </li>
     </ul>
     <form action="{% url 'home' %}" class="form-inline my-2 my-lg-0" method="POST">
